fix(discovery): escape SSH template placeholder quotes in textarea

--- a/web/templates/discovery.html
+++ b/web/templates/discovery.html
@@ -64,7 +64,7 @@
 
   <label>
     <span class="muted">SSH template</span>
-    <textarea class="input discovery-output" id="discovery-ssh-template" readonly placeholder="ssh <user>@<ip> \"curl -sSL ...\""></textarea>
+    <textarea class="input discovery-output" id="discovery-ssh-template" readonly placeholder="ssh &lt;user&gt;@&lt;ip&gt; &quot;curl -sSL ...&quot;"></textarea>
   </label>
   <div class="actions-row">
     <button class="btn" id="discovery-copy-ssh" type="button">Copy SSH Template</button>
